<resources>
    <string name="app_name">GoVida</string>
    <string name="some_error">Couldnt\'t perform the desired action due to a technical Error.
    </string>
    <string name="not_connected_to_internet">Please check your internet</string>
    <string name="email_error">Please enter valid Email Id/Password</string>
    <string name="password_error">Please enter Email Id/Password</string>
    <string name="first_name_error">Please enter valid first name</string>
    <string name="last_name_error">Please enter valid last name</string>
    <string name="empty_error">Both fields cannot be blank</string>
    <string name="valid_email_error">Please enter valid Email Id</string>
    <string name="unknown_error">An error occurred. Please try again.</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GET STARTED</string>
    <string name="slide_1_title">Activity</string>
    <string name="slide_1_desc_1">Your activity data throughout the day converts into GoVida Points (GoVPs)</string>
    <string name="slide_1_desc_2">day converts into GoVida Points (GoVPs)</string>
    <string name="slide_2_title">Challenges</string>
    <string name="slide_2_desc_1">Take part in GoVida Challenges and earn more GoVida Points (GoVPs)</string>
    <string name="slide_2_desc_2">earn more GoVida Points (GoVPs)</string>
    <string name="slide_3_title">Rewards</string>
    <string name="slide_3_desc_1">Redeem your GoVida Points (GoVPs) in exchange for Rewards in our Reward Catalogue
    </string>
    <string name="slide_3_desc_2">exchange for Rewards in our</string>
    <string name="slide_3_desc_3">Reward Catalogue</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>
    <string name="play_again">Play Again</string>
    <string name="title_terms">Terms of Use</string>
    <string name="btn_accept_condition">ACCEPT &amp; CONTINUE</string>
    <string name="demo_terms">This App allows individuals to search for, and engage with, Fitness Service Providers
        including by connecting you with personal trainers and products, and other services described on this App.
        GoVida fitness has prepared this App in good faith. Information on this App may be derived from third party
        sources.  GoVida fitness believes the information on this App is accurate and up to date; however GoVida fitness
        makes no representation or warranty as to the accuracy or currency of the information.
        All prices quoted on the App are in Australian dollars and include GST, unless otherwise indicated. Prices
        quoted on the App should be used as a guide only as they may change from time to time.
        GoVida fitness may cease, interrupt or withdraw your access to the App for any reason, including for upgrades
        and maintenance of the App.
        This App includes services that are available via a mobile device. To the extent that you access the App through
        a mobile device, your wireless service carrier’s standard charges, data rates and other fees may apply. In
        addition, downloading, installing or using certain services may be prohibited or restricted by your carrier and
        not all services may work with all carriers or devices.
        GoVida fitness does not warrant that your access to the App will be uninterrupted or error free.
        To the fullest extent permitted by applicable law, GoVida fitness does not accept liability for any claims or
        losses arising directly or indirectly from:
        A failure to provide the App, or any part thereof; corruptions to or loss of data, errors or Interruptions
        occurring in the course of using, or as part of, the App;
        Any suspension or discontinuance of any Service, or any part thereof; or
        Any use of the App by other users, including any use of the App by other users in manner which contravenes this
        document.
    </string>
    <string name="link_register">REGISTER</string>
    <string name="title_login">Login</string>
    <string name="btn_login">LOGIN</string>
    <string name="link_forget_password">Forgot Password</string>
    <string name="hint_password">Password</string>
    <string name="login_success">Welcome to GoVida - Here are 10 Bonus Points that we will credit to your wallet.</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="info_email">Enter your official email ID \nex:\'johnsmith@example.com\'</string>
    <string name="hint_email">Official Email Id</string>
    <string name="btn_reset">RESET PASSWORD</string>
    <string name="title_be_connected">Be Connected!</string>
    <string name="info_part1">GoVida would like to</string>
    <string name="info_part2">By continuing you allow this app to use your information in accordance with Terms of
        Service
    </string>
    <string name="terms_info_link"><![CDATA[<font color=#6F6C6F>By continuing you allow this app to use your information in accordance with </font> <font color=#322D32>Terms of Service</font>]]></string>
    <string name="info_part3">Terms of Service</string>
    <string name="link">Link</string>
    <string name="continue_btn">Continue</string>
    <string name="alert_googlefit_gps">Please allow Google Fit and GPS. By not linking  you will be unable to earn GoVida points for your activities and for “Check Ins” at Verified Exercise Venues.</string>
    <string name="alert_googlefit">By not linking Google Fit you will be unable to earn GoVida points for your activities.</string>
    <string name="alert_gps">Your Location Settings are set to “off“ please enable Location Settings to earn GoVPs for “Check Ins” at Verified Exercise Venues.</string>
    <string name="gps_off_alert">Your Location Settings are set to “off“ please enable Location Settings to earn GoVPs for “Check Ins” at Verified Exercise Venues.</string>
    <string name="googlefit_bonus_alert">Thank you for connecting Google Fit-You will now earn GoVida points automatically for your daily activity.  Here are a 10 Bonus Points to get you moving!</string>
    <string name="gps_bonus_alert">Thank you for enabling Location Settings- this allows you to earn GoVPs for “Check Ins” at verified Exercise Venues. Here are a 10 Bonus Points to get you on your way!</string>
    <string name="check_email">Check Your Inbox</string>
    <string name="check_email_text">We have sent a confirmation link to \nthe email address.</string>
    <string name="check_spam">Please click the link in email to verify account. If you don\'t receive email please check
        your junk/spam folder.
    </string>
    <string name="btn_got_it">GOT IT</string>
    <string name="do_it_later">DO IT LATER</string>
    <string name="allow">ALLOW</string>
    <string name="fit_info">Earn GoVida Points for your daily steps activity by linking Google Fit. By not linking
        Google Fit you will be unable to earn GoVida points for your activities.
    </string>
    <string name="gps_info">GPS data is used to validate your attendance at a Verified Exercise Venue. Enable your
        Location Settings and earn GoVPs through our "Check In" function at Verified Exercise Venues.
    </string>
    <string name="profile_info">View and store Camera information for profile completion</string>
    <string name="title_register">Register</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="link_text">You agreed to the &#160;</string>
    <string name="text_terms">Terms of Use.</string>
    <string name="link_login">Login</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email_id">Official Email Id</string>
    <string name="demo_fname">Johnny</string>
    <string name="demo_lname">Willium</string>
    <string name="demo_email">temp.user@e-zest.in</string>
    <string name="demo_password">ezest@123</string>
    <string name="menu_home_home">Home</string>
    <string name="menu_home_challenges">Challenges</string>
    <string name="menu_home_rewards">Rewards</string>
    <string name="menu_home_profile">My Profile</string>
    <string name="title_activity">Activity</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="demo_date">TODAY, %1$s</string>
    <string name="date_seperator">&#160;-&#160;</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="floors">Floors</string>
    <string name="check_in">Check Ins</string>
    <string name="govps">GoVPs</string>
    <string name="demo_2865">0</string>
    <string name="demo_km">00.0 km</string>
    <string name="demo_234">234</string>
    <string name="demo_02">02</string>
    <string name="demo_10">10</string>
    <string name="my_govida_points">My GoVida Points</string>
    <string name="redeemable">Redeemable</string>
    <string name="demo_0">0</string>
    <string name="charity_earnings">Charity Earnings</string>
    <string name="non_redeemable">Non Redeemable</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="activity_points">Activity Points</string>
    <string name="challenge_points">Challenges</string>
    <string name="govps_redeem_points">GoVPs Redeemed</string>
    <string name="activity">Activity</string>
    <string name="gbp">1 GOVP = 1GBP</string>
    <string name="redeem_points">REDEEM POINTS</string>
    <string name="demo_my_ongoing_challange">My Ongoing Challenges </string>
    <string name="demo_my_ongoing_challenge_count">(1)</string>
    <string name="step_challenge">24 Hour Step Challenge</string>
    <string name="step_based">(Step based)</string>
    <string name="complete_700_steps">Complete 700 steps in 24 hours</string>
    <string name="demo_120">120</string>
    <string name="participants">Participants</string>
    <string name="demo_24hr">24hr</string>
    <string name="duration">Duration</string>
    <string name="demo_20">20</string>
    <string name="demo_percentage">%1$s %</string>
    <string name="complete">Complete</string>
    <string name="flight_based_challenge">(Flight based challenge)</string>
    <string name="demo_39">39</string>
    <string name="day_14">14d</string>
    <string name="demo_50">50</string>
    <string name="demo_percentage_30">30%</string>
    <string name="days_30">30 Days</string>
    <string name="steps_10000">10,000 Steps</string>
    <string name="govps_100">100 GoVPs</string>
    <string name="days_14">14 Days</string>
    <string name="flights_587">587 Flights</string>
    <string name="govps_50">50 GoVPs</string>
    <string name="demo_percentage_50">50%</string>
    <string name="demo_hey_user">Hey %1$s!</string>
    <string name="demo_percentage_40">40%</string>
    <string name="checkin_card_title">Check-In</string>
    <string name="challange_card_title">Challenge</string>
    <string name="today">Today</string>
    <string name="menu_check_in">Check In</string>
    <string name="demo_gym_name">JD Gyms Manchester</string>
    <string name="demo_gym_address">Bridgewater House, Whitworth St, Manchester</string>
    <string name="non_verified">Non Verified</string>
    <string name="notifications">Notifications</string>
    <string name="google_fit_access">GoogleFit Access</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="location_access">Location Access</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LOGOUT</string>
</resources>