<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui_section.registration_section.ActivityRegister">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <Button
            android:id="@+id/register_tv_link_login"
            android:layout_width="wrap_content"
            style="@style/simple_button_grey"
            android:text="@string/link_login"
            android:lineSpacingMultiplier="1.20"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-25dip"
            android:layout_marginTop="@dimen/d40dip"
            android:layout_marginBottom="@dimen/d10dip"
            android:paddingEnd="@dimen/d40dip"
            android:paddingStart="@dimen/d20dip"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/d20dip"
        android:layout_marginStart="@dimen/d20dip"
        android:layout_marginEnd="@dimen/d20dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_register"
            android:padding="@dimen/d10dip"
            style="@style/general_text_view_style"
            android:textSize="@dimen/s26sp"
            android:lineSpacingMultiplier="1.20"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_boldcondensed"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/register_et_first_name"
            android:inputType="textPersonName"
            style="@style/value_enter_edittext"
            android:lineSpacingMultiplier="1.20"
            android:layout_marginTop="@dimen/d20dip"
            android:paddingTop="@dimen/d10dip"
            android:paddingStart="@dimen/d20dip"
            android:paddingEnd="@dimen/d10dip"
            android:maxLength="80"
            android:hint="@string/hint_first"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/d20dip"/>

        <EditText
            android:id="@+id/register_et_last_name"
            android:inputType="textPersonName"
            style="@style/value_enter_edittext"
            android:lineSpacingMultiplier="1.20"
            android:layout_marginTop="@dimen/d20dip"
            android:paddingTop="@dimen/d10dip"
            android:paddingStart="@dimen/d20dip"
            android:paddingEnd="@dimen/d10dip"
            android:maxLength="80"
            android:hint="@string/hint_last"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/d20dip"/>

        <EditText
            android:id="@+id/register_et_email"
            android:inputType="textEmailAddress"
            style="@style/value_enter_edittext"
            android:layout_marginTop="@dimen/d20dip"
            android:paddingTop="@dimen/d10dip"
            android:lineSpacingMultiplier="1.20"
            android:paddingStart="@dimen/d20dip"
            android:paddingEnd="@dimen/d10dip"
            android:hint="@string/hint_email_id"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/d20dip"/>


        <Button
            android:id="@+id/register_btn_continue"
            android:layout_marginTop="@dimen/d20dip"
            android:textSize="@dimen/s18sp"
            android:text="@string/btn_continue"
            style="@style/simple_button"
        />

        <RelativeLayout
            android:id="@+id/register_rl_terms_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20dip"
            android:gravity="center"
            android:padding="@dimen/d10dip"
        >
            <TextView
                android:id="@+id/register_tv_demo_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="@dimen/s18sp"
                style="@style/general_text_view_style"
                android:text="@string/link_text"
                android:textColor="@color/colorBlack"
            />
            <TextView
                android:id="@+id/register_tv_link_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:minLines="1"
                style="@style/general_text_view_style"
                android:layout_marginStart="-5dip"
                android:textSize="@dimen/s18sp"
                android:text="@string/text_terms"
                android:textColor="@color/link_color"
                android:layout_toEndOf="@id/register_tv_demo_terms"
            />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>