<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui_section.acount_validation_link_section.ActivityLinkShared">

    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
    >
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20dip"
                >
            <ImageView
                    android:layout_width="@dimen/d140dip"
                    android:layout_height="@dimen/d140dip"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_email_sent"
            />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_email"
            android:padding="@dimen/d10dip"
            style="@style/general_text_view_style"
            android:textSize="@dimen/s26sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_boldcondensed"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/d40dip"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/check_email_text"
                android:padding="@dimen/d10dip"
                android:textSize="@dimen/s18sp"
                android:gravity="center"
                style="@style/general_text_view_style"
                android:fontFamily="@font/roboto_regular"
                />
        <TextView
                android:id="@+id/link_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/demo_email"
                android:textSize="@dimen/s20sp"
                style="@style/general_text_view_style"
                android:fontFamily="@font/roboto_boldcondensed"
                android:textColor="@color/dark_gray"/>
        <Button
                android:id="@+id/link_btn_got_it"
                android:layout_marginTop="@dimen/d20dip"
                android:text="@string/btn_got_it"
                style="@style/simple_button"
                android:layout_width="@dimen/d160dip"
        />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/check_spam"
                    android:padding="@dimen/d10dip"
                    android:textSize="@dimen/s16sp"
                    style="@style/general_text_view_style"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>
    
</LinearLayout>